

[metadata]
name = confocal_microscopy
keywords=confocal_microscopy
version = 0.0.1
license = "MIT license",
description = Contains code to visualise 3D confocal microscopy images and 3D confocal microscopy videos
long_description = file: README.rst
author = Yngve Mardal Moe
author_email = yngve.m.moe@gmail.com
url=https://github.com/yngvem/confocal_microscopy
classifiers=
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    shapely
    numpy
    scipy
    matplotlib
    scikit-image
    numexpr
    pyvista
    tqdm
    h5py
    joblib
    openpiv
    sklearn
    networkx
    numba
    PyQt5
    pyvistaqt
    trackpy
    papermill
    python-docx
    plotly
    seaborn
    notebook
    statsmodels
    pyyaml

[options.packages.find]
where=src



[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:confocal_microscopy/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'



[bdist_wheel]
universal = 1



[flake8]
exclude = docs
max-line-length = 100


